# paxect-core

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Community & Governance.md  DISCLAIMER.md  ENTERPRISE_PACK_OVERVIEW.md  LICENSE.md  NOTICE  NOTICE.md  PAXECT-Data-Policy.md  README.md  README_TESTS.md  SECURITY.md  TRADEMARKS.md  paxect-core-complete-CODE_OF_CONDUCT.md  paxect-core-complete-CONTRIBUTING.md  paxect-core-complete-ENTERPRISE_PACK_OVERVIEW.md  paxect-core-complete-LICENSE.md  paxect-core-complete-NOTICE.md  paxect-core-complete-PAXECT-Data-Policy.md  paxect-core-complete-SECURITY.md  paxect-core-complete-TRADEMARKS.md  paxect_core.py  readme-Community & Governance  smoke.sh
DISCLAIMER.md-paxect-core-complete/: PAXECT Core Complete — DISCLAIMER.md
bindings/paxect_core/: Cargo.toml  cargo.toml  pyproject.toml
bindings/paxect_core/src/: lib.rs
core/: Cargo.toml  cor_src_lib.rs  core_Cargo.toml
core/src/: lib.rs
demo/: demo_00_env_check.py  demo_01_quickstart_smoke.py  demo_02_determinism_roundtrip.py  demo_03_perf_baseline.py  demo_04_strict_parser.py  demo_06_cross_os_verify.py
demos/: 01_quickstart_smoke.py  02_determinism_roundtrip.py  03_perf_baseline.py  04_strict_parser.py  05_mixed_industry_smoke.py  06_cross_os_verify.py  07_multichannel_os.py  08_industry_bridge.py  09_universal_smoke.py  10_universal_core_only.py  README.md  demo_00_env_check.py  demo_11_fail_and_recover.py  demo_12_stress_test_core.py
demos-PAXECT-complete/: demo_07_selftune_adaptive.py  demo_08_secure_multichannel_aead.py  demo_08_secure_multichannel_aead_hybrid.py
(+20 files in other folders)
